// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-input-textarea #render should render component as expected (1) 1`] = `
<gux-input-textarea>
  <!---->
  <div class="gux-resize-none">
    <textarea slot="input" type="test"></textarea>
  </div>
</gux-input-textarea>
`;

exports[`gux-input-textarea #render should render component as expected (2) 1`] = `
<gux-input-textarea resize="none">
  <!---->
  <div class="gux-resize-none">
    <textarea slot="input" type="test"></textarea>
  </div>
</gux-input-textarea>
`;

exports[`gux-input-textarea #render should render component as expected (3) 1`] = `
<gux-input-textarea resize="manual">
  <!---->
  <div class="gux-resize-manual">
    <textarea slot="input" type="test"></textarea>
  </div>
</gux-input-textarea>
`;

exports[`gux-input-textarea #render should render component as expected (4) 1`] = `
<gux-input-textarea resize="auto">
  <!---->
  <div class="gux-resize-auto" data-replicated-value="undefined">
    <textarea slot="input" type="test"></textarea>
  </div>
</gux-input-textarea>
`;
